[project]
name = "reader"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "Naked",
    "certifi==2023.7.22",
    "charset-normalizer==2.0.12",
    "html2text==2020.1.16",
    "idna==3.3",
    "requests==2.31.0",
    "urllib3==1.26.18",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []
